--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -1,1 +1,437 @@
+<!doctype html>
+<html lang="en-CA">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
+  <meta name="format-detection" content="telephone=no">
 
+  <title>Privacy Policy (Canada, 2026) | PrefabHomesCanada</title>
+  <meta name="description" content="Privacy Policy for PrefabHomesCanada: what data we collect, how we use it, cookies/analytics, affiliate links, and how to contact us." />
+  <link rel="canonical" href="https://prefabhomescanada.github.io/privacy-policy/">
+
+  <meta name="robots" content="index,follow,max-image-preview:large,max-snippet=-1,max-video-preview=-1">
+  <meta name="referrer" content="strict-origin-when-cross-origin">
+  <meta name="color-scheme" content="dark light">
+  <meta name="theme-color" content="#0b1020">
+  <meta name="author" content="PrefabHomesCanada Editorial">
+
+  <!-- Favicons (root) -->
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="icon" href="/favicon.ico">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="manifest" href="/site.webmanifest">
+
+  <!-- Shared CSS -->
+  <link rel="stylesheet" href="/assets/css/styles.css">
+
+  <!-- Open Graph -->
+  <meta property="og:type" content="article">
+  <meta property="og:site_name" content="PrefabHomesCanada">
+  <meta property="og:title" content="Privacy Policy (Canada, 2026) | PrefabHomesCanada">
+  <meta property="og:description" content="What we collect, how we use it, cookies/analytics, affiliate links, and how to contact us." />
+  <meta property="og:url" content="https://prefabhomescanada.github.io/privacy-policy/">
+  <meta property="og:image" content="https://prefabhomescanada.github.io/assets/images/og/privacy-policy-1200x630.webp">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Privacy Policy (Canada, 2026) | PrefabHomesCanada">
+  <meta name="twitter:description" content="What we collect, how we use it, cookies/analytics, affiliate links, and how to contact us." />
+  <meta name="twitter:image" content="https://prefabhomescanada.github.io/assets/images/og/privacy-policy-1200x630.webp">
+
+  <!-- JSON-LD: Organization + WebSite -->
+  <script type="application/ld+json">
+  {
+    "@context":"https://schema.org",
+    "@type":"Organization",
+    "name":"PrefabHomesCanada",
+    "url":"https://prefabhomescanada.github.io/",
+    "logo":"https://prefabhomescanada.github.io/android-chrome-512x512.png"
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context":"https://schema.org",
+    "@type":"WebSite",
+    "@id":"https://prefabhomescanada.github.io/#website",
+    "name":"PrefabHomesCanada",
+    "url":"https://prefabhomescanada.github.io/"
+  }
+  </script>
+
+  <!-- JSON-LD: Article -->
+  <script type="application/ld+json">
+  {
+    "@context":"https://schema.org",
+    "@type":"Article",
+    "@id":"https://prefabhomescanada.github.io/privacy-policy/#article",
+    "headline":"Privacy Policy (Canada, 2026) | PrefabHomesCanada",
+    "description":"Privacy Policy for PrefabHomesCanada: what data we collect, how we use it, cookies/analytics, affiliate links, and how to contact us.",
+    "inLanguage":"en-CA",
+    "image":[
+      "https://prefabhomescanada.github.io/assets/images/og/privacy-policy-1200x630.webp"
+    ],
+    "datePublished":"2026-02-14",
+    "dateModified":"2026-02-14",
+    "isPartOf":{"@id":"https://prefabhomescanada.github.io/#website"},
+    "mainEntityOfPage":{"@type":"WebPage","@id":"https://prefabhomescanada.github.io/privacy-policy/"},
+    "author":{"@type":"Organization","name":"PrefabHomesCanada Editorial"},
+    "publisher":{
+      "@type":"Organization",
+      "name":"PrefabHomesCanada",
+      "logo":{"@type":"ImageObject","url":"https://prefabhomescanada.github.io/android-chrome-512x512.png"}
+    }
+  }
+  </script>
+
+  <!-- JSON-LD: Breadcrumbs -->
+  <script type="application/ld+json">
+  {
+    "@context":"https://schema.org",
+    "@type":"BreadcrumbList",
+    "itemListElement":[
+      {"@type":"ListItem","position":1,"name":"Home","item":"https://prefabhomescanada.github.io/"},
+      {"@type":"ListItem","position":2,"name":"Privacy Policy","item":"https://prefabhomescanada.github.io/privacy-policy/"}
+    ]
+  }
+  </script>
+</head>
+
+<body>
+  <a class="skip-link" href="#main">Skip to content</a>
+
+  <header class="site-header" id="top">
+    <div class="wrap header-inner">
+      <a class="brand" href="/" aria-label="PrefabHomesCanada Home">
+        <img
+          class="brand-logo"
+          src="/assets/images/branding/prefab-homes-canada-logo-horizontal.png"
+          alt="PrefabHomesCanada"
+          width="1000"
+          height="250"
+          loading="eager"
+          decoding="async">
+      </a>
+
+      <button id="menuBtn" class="btn btn-ghost" type="button"
+              aria-label="Open menu" aria-expanded="false" aria-controls="nav">
+        Menu
+      </button>
+
+      <nav class="nav" id="nav" aria-label="Primary">
+        <a href="/best-prefab-homes-canada/">Best Prefab Homes</a>
+        <a href="/how-we-test/">How we test</a>
+        <a href="/methodology/">Methodology</a>
+        <a href="/about/">About</a>
+        <a href="/disclosure/">Disclosure</a>
+      </nav>
+
+      <div class="header-cta">
+        <a class="btn btn-primary" href="/best-prefab-homes-canada/">See the shortlist</a>
+      </div>
+    </div>
+  </header>
+
+  <main id="main">
+    <!-- HERO -->
+    <section class="hero">
+      <div class="wrap hero-grid">
+        <div class="hero-card">
+          <span class="kicker">Policy</span>
+          <h1 class="hero-title">Privacy Policy</h1>
+          <p class="hero-sub">
+            This Privacy Policy explains what information PrefabHomesCanada collects, how it’s used, and the choices you may have.
+            This site is published for Canadian readers (en-CA).
+          </p>
+
+          <div class="pillrow">
+            <span class="pill2">Cookies</span>
+            <span class="pill2">Analytics</span>
+            <span class="pill2">Affiliate links</span>
+            <span class="pill2">Contact</span>
+          </div>
+
+          <p class="disclaimer hero-disclaimer">
+            Effective date: <strong>February 14, 2026</strong>. We may update this page from time to time by posting a new version here.
+          </p>
+        </div>
+
+        <aside class="hero-media" aria-label="Page navigation">
+          <div class="media-inner">
+            <div class="noteBox toc tocBox">
+              <h2 class="tocTitle">On this page</h2>
+              <p class="small tocSub">Jump to the section you need.</p>
+              <ul class="specs tocList">
+                <li><a href="#summary">Quick summary</a></li>
+                <li><a href="#info-we-collect">Information we collect</a></li>
+                <li><a href="#cookies">Cookies & analytics</a></li>
+                <li><a href="#affiliate">Affiliate links</a></li>
+                <li><a href="#sharing">Sharing</a></li>
+                <li><a href="#choices">Your choices</a></li>
+                <li><a href="#security">Security</a></li>
+                <li><a href="#children">Children</a></li>
+                <li><a href="#contact">Contact</a></li>
+              </ul>
+            </div>
+          </div>
+        </aside>
+      </div>
+    </section>
+
+    <div class="wrap"><div class="hr-glow"></div></div>
+
+    <!-- SUMMARY -->
+    <section id="summary" class="section anchor">
+      <div class="wrap">
+        <h2>Quick summary</h2>
+        <div class="grid">
+          <div class="card grid-span-6">
+            <h3>We don’t sell personal info</h3>
+            <p>We do not sell your personal information. We use analytics to understand site performance and improve content.</p>
+          </div>
+          <div class="card grid-span-6">
+            <h3>Affiliate links may earn a commission</h3>
+            <p>If you click an affiliate link and buy something, we may earn a commission at no extra cost to you.</p>
+          </div>
+          <div class="card grid-span-6">
+            <h3>Most data is standard web log data</h3>
+            <p>Like most sites, we may receive IP address, browser type, pages visited, and approximate location (city/region).</p>
+          </div>
+          <div class="card grid-span-6">
+            <h3>You can control cookies</h3>
+            <p>You can limit cookies via your browser settings. Some analytics may still collect aggregated data.</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- INFO WE COLLECT -->
+    <section id="info-we-collect" class="section anchor">
+      <div class="wrap">
+        <h2>Information we collect</h2>
+        <p>
+          The site may collect information in the following ways, depending on how it is configured and how you interact with it.
+        </p>
+
+        <div class="grid">
+          <div class="card grid-span-6">
+            <h3>Information you provide</h3>
+            <ul class="specs">
+              <li>If you contact us (for example via email or a contact form), you may provide your name, email address, and message content.</li>
+              <li>If you include personal details in your message, we will receive them.</li>
+            </ul>
+          </div>
+
+          <div class="card grid-span-6">
+            <h3>Information collected automatically</h3>
+            <ul class="specs">
+              <li>IP address (often used for security, fraud prevention, and approximate location)</li>
+              <li>Browser/device type, operating system, and referring pages</li>
+              <li>Pages visited, time on page, clicks, and general usage patterns</li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="noteBox noteBox--mt14">
+          <p class="small noteBoxText">
+            We aim to collect only what we need to operate and improve the site. If a feature is not enabled (for example, a contact form),
+            then the related collection may not apply.
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <!-- COOKIES -->
+    <section id="cookies" class="section anchor">
+      <div class="wrap">
+        <h2>Cookies & analytics</h2>
+        <p>
+          Cookies are small files stored on your device. We may use cookies or similar technologies to support site functionality and understand performance.
+        </p>
+
+        <div class="grid">
+          <div class="card grid-span-6">
+            <h3>Analytics</h3>
+            <p>
+              We may use analytics tools (such as Google Analytics) to measure traffic and improve content. Analytics may collect usage data such as page views,
+              links clicked, approximate location, and device information.
+            </p>
+          </div>
+
+          <div class="card grid-span-6">
+            <h3>Cookie controls</h3>
+            <ul class="specs">
+              <li>You can delete or block cookies in your browser settings.</li>
+              <li>Blocking cookies can affect site features (depending on what’s used).</li>
+              <li>Some analytics may still measure aggregated events using non-cookie methods (depending on configuration).</li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="noteBox noteBox--mt14">
+          <p class="small noteBoxText">
+            If you want a stricter setup later (consent banners / Consent Mode), you can add it, but this policy already explains the purpose and categories.
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <!-- AFFILIATE -->
+    <section id="affiliate" class="section anchor">
+      <div class="wrap">
+        <h2>Affiliate links</h2>
+        <p>
+          PrefabHomesCanada may include affiliate links (for example, to Amazon). When you click an affiliate link, a third party may use cookies or similar
+          technologies to track referrals and attribute purchases.
+        </p>
+
+        <div class="noteBox">
+          <p class="disclaimer">
+            Affiliate programs are operated by third parties. Their data practices are governed by their own policies, not ours.
+            For more details, see our <a href="/disclosure/" style="text-decoration:underline;text-underline-offset:3px;">Disclosure</a>.
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <!-- SHARING -->
+    <section id="sharing" class="section anchor">
+      <div class="wrap">
+        <h2>Sharing</h2>
+        <p>We may share information in limited situations:</p>
+
+        <div class="grid">
+          <div class="card grid-span-6">
+            <h3>Service providers</h3>
+            <p>
+              We may use service providers (hosting, analytics, email tools) who process information on our behalf to operate the site.
+              They are expected to protect data and use it only for the service provided.
+            </p>
+          </div>
+
+          <div class="card grid-span-6">
+            <h3>Legal and safety</h3>
+            <p>
+              We may disclose information if required by law, to respond to lawful requests, or to protect rights, safety, and site integrity.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- CHOICES -->
+    <section id="choices" class="section anchor">
+      <div class="wrap">
+        <h2>Your choices</h2>
+        <div class="grid">
+          <div class="card grid-span-6">
+            <h3>Browser controls</h3>
+            <ul class="specs">
+              <li>Block or delete cookies using your browser settings.</li>
+              <li>Use private browsing modes to reduce stored data on your device.</li>
+            </ul>
+          </div>
+
+          <div class="card grid-span-6">
+            <h3>Contact requests</h3>
+            <p>
+              If you contact us and want us to delete the message thread, you can request it (see Contact below).
+              We may keep limited records when needed for security or compliance.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- SECURITY -->
+    <section id="security" class="section anchor">
+      <div class="wrap">
+        <h2>Security</h2>
+        <p>
+          We use reasonable safeguards to protect information. However, no method of transmission or storage is 100% secure.
+          Please avoid sending sensitive personal information through basic contact channels.
+        </p>
+      </div>
+    </section>
+
+    <!-- CHILDREN -->
+    <section id="children" class="section anchor">
+      <div class="wrap">
+        <h2>Children</h2>
+        <p>
+          PrefabHomesCanada is intended for a general audience and is not directed to children. We do not knowingly collect personal information from children.
+        </p>
+      </div>
+    </section>
+
+    <!-- CONTACT -->
+    <section id="contact" class="section anchor">
+      <div class="wrap">
+        <h2>Contact</h2>
+        <p>
+          Questions about this Privacy Policy? Contact PrefabHomesCanada via the method listed on the site’s contact page (if available),
+          or use the email address you provide in your website footer/contact section.
+        </p>
+
+        <div class="noteBox noteBox--mt14">
+          <p class="small noteBoxText">
+            Tip: If you create a <code>/contact/</code> page later, add it to the header/footer nav and then update this section to point to it.
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <div class="wrap"><div class="sep"></div></div>
+  </main>
+
+  <footer class="site-footer" role="contentinfo">
+    <div class="wrap footer-grid">
+      <div class="footerBrand">
+        <a class="footerBrandLink" href="/" aria-label="PrefabHomesCanada home">
+          <div class="footerBrandRow">
+            <img
+              class="footerIcon"
+              src="/assets/images/branding/phc-icon-1024.png"
+              width="28" height="28"
+              alt="PrefabHomesCanada icon"
+              loading="lazy" decoding="async">
+            <strong class="footerName">PrefabHomesCanada</strong>
+          </div>
+        </a>
+
+        <p class="small footerBlurb">
+          A practical guide for Canadian buyers researching expandable and modular prefab homes. No hype. Just planning clarity.
+        </p>
+      </div>
+
+      <nav class="footerNav" aria-label="Footer">
+        <p class="footerTitle small">Links</p>
+        <ul class="footerLinksList">
+          <li><a href="/best-prefab-homes-canada/">Best prefab homes</a></li>
+          <li><a href="/how-we-test/">How we test</a></li>
+          <li><a href="/methodology/">Methodology</a></li>
+          <li><a href="/about/">About</a></li>
+          <li><a href="/disclosure/">Disclosure</a></li>
+          <li><a href="/privacy-policy/" class="is-active">Privacy</a></li>
+        </ul>
+      </nav>
+    </div>
+
+    <div class="wrap footerBottom">
+      <div class="footerLegal small">
+        <span>© <span id="y"></span> PrefabHomesCanada</span>
+        <span class="footerDot" aria-hidden="true">•</span>
+        <a href="/privacy-policy/">Privacy policy</a>
+        <span class="footerDot" aria-hidden="true">•</span>
+        <span class="footerMuted">Listings can change. Verify documentation before purchase.</span>
+      </div>
+
+      <a class="footerTop small" href="#top" aria-label="Back to top">Back to top ↑</a>
+    </div>
+  </footer>
+
+  <script src="/assets/js/site.js" defer></script>
+</body>
+</html>
