--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -5,9 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
   <meta name="format-detection" content="telephone=no">
 
-  <title>Privacy Policy (Canada, 2026) | PrefabHomesCanada</title>
-  <meta name="description" content="Privacy Policy for PrefabHomesCanada: what data we collect, how we use it, cookies/analytics, affiliate links, and how to contact us." />
-  <link rel="canonical" href="https://prefabhomescanada.github.io/privacy-policy/">
+  <title>About (Canada, 2026) | PrefabHomesCanada</title>
+  <meta name="description" content="About PrefabHomesCanada: our mission, editorial approach, and how we write practical, Canada-focused prefab home guides without hype." />
+  <link rel="canonical" href="https://prefabhomescanada.github.io/about/">
 
   <meta name="robots" content="index,follow,max-image-preview:large,max-snippet=-1,max-video-preview=-1">
   <meta name="referrer" content="strict-origin-when-cross-origin">
@@ -28,18 +28,18 @@
   <!-- Open Graph -->
   <meta property="og:type" content="article">
   <meta property="og:site_name" content="PrefabHomesCanada">
-  <meta property="og:title" content="Privacy Policy (Canada, 2026) | PrefabHomesCanada">
-  <meta property="og:description" content="What we collect, how we use it, cookies/analytics, affiliate links, and how to contact us." />
-  <meta property="og:url" content="https://prefabhomescanada.github.io/privacy-policy/">
-  <meta property="og:image" content="https://prefabhomescanada.github.io/assets/images/og/privacy-policy-1200x630.webp">
+  <meta property="og:title" content="About PrefabHomesCanada (Canada, 2026)">
+  <meta property="og:description" content="Who we are, what we publish, and how we keep guides practical for Canadian prefab buyers." />
+  <meta property="og:url" content="https://prefabhomescanada.github.io/about/">
+  <meta property="og:image" content="https://prefabhomescanada.github.io/assets/images/og/about-1200x630.webp">
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="630">
 
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Privacy Policy (Canada, 2026) | PrefabHomesCanada">
-  <meta name="twitter:description" content="What we collect, how we use it, cookies/analytics, affiliate links, and how to contact us." />
-  <meta name="twitter:image" content="https://prefabhomescanada.github.io/assets/images/og/privacy-policy-1200x630.webp">
+  <meta name="twitter:title" content="About (Canada, 2026) | PrefabHomesCanada">
+  <meta name="twitter:description" content="Who we are, what we publish, and how we keep guides practical for Canadian prefab buyers." />
+  <meta name="twitter:image" content="https://prefabhomescanada.github.io/assets/images/og/about-1200x630.webp">
 
   <!-- JSON-LD: Organization + WebSite -->
   <script type="application/ld+json">
@@ -66,17 +66,17 @@
   {
     "@context":"https://schema.org",
     "@type":"Article",
-    "@id":"https://prefabhomescanada.github.io/privacy-policy/#article",
-    "headline":"Privacy Policy (Canada, 2026) | PrefabHomesCanada",
-    "description":"Privacy Policy for PrefabHomesCanada: what data we collect, how we use it, cookies/analytics, affiliate links, and how to contact us.",
+    "@id":"https://prefabhomescanada.github.io/about/#article",
+    "headline":"About PrefabHomesCanada (Canada, 2026)",
+    "description":"About PrefabHomesCanada: our mission, editorial approach, and how we write practical, Canada-focused prefab home guides without hype.",
     "inLanguage":"en-CA",
     "image":[
-      "https://prefabhomescanada.github.io/assets/images/og/privacy-policy-1200x630.webp"
+      "https://prefabhomescanada.github.io/assets/images/og/about-1200x630.webp"
     ],
     "datePublished":"2026-02-14",
     "dateModified":"2026-02-14",
     "isPartOf":{"@id":"https://prefabhomescanada.github.io/#website"},
-    "mainEntityOfPage":{"@type":"WebPage","@id":"https://prefabhomescanada.github.io/privacy-policy/"},
+    "mainEntityOfPage":{"@type":"WebPage","@id":"https://prefabhomescanada.github.io/about/"},
     "author":{"@type":"Organization","name":"PrefabHomesCanada Editorial"},
     "publisher":{
       "@type":"Organization",
@@ -93,10 +93,20 @@
     "@type":"BreadcrumbList",
     "itemListElement":[
       {"@type":"ListItem","position":1,"name":"Home","item":"https://prefabhomescanada.github.io/"},
-      {"@type":"ListItem","position":2,"name":"Privacy Policy","item":"https://prefabhomescanada.github.io/privacy-policy/"}
+      {"@type":"ListItem","position":2,"name":"About","item":"https://prefabhomescanada.github.io/about/"}
     ]
   }
   </script>
+
+  <!-- Google tag (GA4) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-5TC3NKCHW5"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-5TC3NKCHW5', { send_page_view: true });
+  </script>
+
 </head>
 
 <body>
