--- a/disclosure/index.html
+++ b/disclosure/index.html
@@ -15,6 +15,16 @@
   <meta name="theme-color" content="#0b1020">
 
   <link rel="stylesheet" href="/assets/css/styles.css">
+    
+  <!-- Google tag (GA4) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-5TC3NKCHW5"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-5TC3NKCHW5', { send_page_view: true });
+  </script>
+
 </head>
 
 <body>
