--- a/methodology/index.html
+++ b/methodology/index.html
@@ -97,6 +97,16 @@
     ]
   }
   </script>
+
+  <!-- Google tag (GA4) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-5TC3NKCHW5"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-5TC3NKCHW5', { send_page_view: true });
+  </script>
+  
 </head>
 
 <body>
