--- a/best-prefab-homes-canada/index.html
+++ b/best-prefab-homes-canada/index.html
@@ -25,10 +25,17 @@
   <!-- Shared CSS -->
   <link rel="stylesheet" href="/assets/css/styles.css">
 
+  <!-- Optional perf: preload HERO image (LCP) -->
+  <link rel="preload" as="image"
+        href="/assets/images/hero/best-prefab-homes-canada-2026-hero-1600x900.webp"
+        imagesrcset="/assets/images/hero/best-prefab-homes-canada-2026-hero-1600x900.webp 1600w,
+                    /assets/images/hero/best-prefab-homes-canada-2026-hero-2400x1350.webp 2400w"
+        imagesizes="100vw">
+
   <!-- Optional perf: preload OG image -->
   <link rel="preload" as="image"
-        href="/assets/images/og/best-prefab-homes-canada-2026-1200x630.webp"
-        imagesrcset="/assets/images/og/best-prefab-homes-canada-2026-1200x630.webp 1200w"
+        href="/assets/images/og/best-prefab-homes-canada-2026-og-1200x630.webp"
+        imagesrcset="/assets/images/og/best-prefab-homes-canada-2026-og-1200x630.webp 1200w"
         imagesizes="100vw">
 
   <!-- Open Graph -->
@@ -37,7 +44,7 @@
   <meta property="og:title" content="7 Best Prefab Homes on Amazon Canada (2026 Guide)">
   <meta property="og:description" content="A realistic Canadian guide to expandable prefab homes on Amazon: what’s included, what’s missing, and true installed costs.">
   <meta property="og:url" content="https://prefabhomescanada.github.io/best-prefab-homes-canada/">
-  <meta property="og:image" content="https://prefabhomescanada.github.io/assets/images/og/best-prefab-homes-canada-2026-1200x630.webp">
+  <meta property="og:image" content="https://prefabhomescanada.github.io/assets/images/og/best-prefab-homes-canada-2026-og-1200x630.webp">
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="630">
 
@@ -45,7 +52,7 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="7 Best Prefab Homes on Amazon Canada (2026 Guide)">
   <meta name="twitter:description" content="Realistic Canadian guide to expandable prefab homes on Amazon. What’s included, what’s missing, and true installed costs.">
-  <meta name="twitter:image" content="https://prefabhomescanada.github.io/assets/images/og/best-prefab-homes-canada-2026-1200x630.webp">
+  <meta name="twitter:image" content="https://prefabhomescanada.github.io/assets/images/og/best-prefab-homes-canada-2026-og-1200x630.webp">
 
   <!-- JSON-LD: Organization + WebSite -->
   <script type="application/ld+json">
@@ -77,7 +84,7 @@
     "description":"We reviewed the best expandable prefab homes available on Amazon Canada in 2026. See pricing, what’s included, real installation costs, and what to verify before buying.",
     "inLanguage":"en-CA",
     "image":[
-      "https://prefabhomescanada.github.io/assets/images/og/best-prefab-homes-canada-2026-1200x630.webp"
+      "https://prefabhomescanada.github.io/assets/images/og/best-prefab-homes-canada-2026-og-1200x630.webp"
     ],
     "datePublished":"2026-02-13",
     "dateModified":"2026-02-14",
@@ -211,7 +218,6 @@
     gtag('js', new Date());
     gtag('config', 'G-5TC3NKCHW5', { send_page_view: true });
   </script>
-  
 </head>
 
 <body id="top">
