--- a/best-prefab-homes-canada/index.html
+++ b/best-prefab-homes-canada/index.html
@@ -267,56 +267,78 @@
 
   <main id="main">
     <!-- HERO -->
-    <section class="hero">
-      <div class="wrap hero-grid">
-        <div class="hero-card">
-          <span class="kicker">2026 Canada guide</span>
-          <h1 class="hero-title">7 Best Prefab Homes on Amazon Canada (2026 Guide)</h1>
-          <p class="hero-sub">
-            Expandable prefab homes on Amazon can look “all-in” at first glance, but most listings are closer to a structure or shell than a move-in-ready house.
-            This guide is written for Canadian buyers who want a realistic view of what you get, what you still need, and what the installed cost can look like once you
-            factor in delivery, foundations, permits, plumbing, electrical, insulation, and winterization.
-          </p>
+<section class="hero">
+  <div class="wrap hero-grid">
+    <div class="hero-card">
+      <span class="kicker">2026 Canada guide</span>
+      <h1 class="hero-title">7 Best Prefab Homes on Amazon Canada (2026 Guide)</h1>
+      <p class="hero-sub">
+        Expandable prefab homes on Amazon can look “all-in” at first glance, but most listings are closer to a structure or shell than a move-in-ready house.
+        This guide is written for Canadian buyers who want a realistic view of what you get, what you still need, and what the installed cost can look like once you
+        factor in delivery, foundations, permits, plumbing, electrical, insulation, and winterization.
+      </p>
 
-          <div class="pillrow">
-            <span class="pill2">No hype</span>
-            <span class="pill2">Canada-first costs</span>
-            <span class="pill2">What to verify before buying</span>
-            <span class="pill2">Expandable/modular focus</span>
-          </div>
-
-          <div class="cta-row">
-            <a class="btn btn-primary" href="#comparison">Jump to comparison table</a>
-            <a class="btn btn-ghost" href="#real-costs">See real cost breakdown</a>
-          </div>
-
-          <p class="disclaimer hero-disclaimer">
-            Important: Local rules vary widely. Before you buy, confirm zoning and occupancy rules with your municipality and request documentation from the seller
-            (drawings/specs, electrical approvals, insulation details, and any snow-load or wind-load claims).
-          </p>
-        </div>
-
-        <aside class="hero-media" aria-label="Page navigation">
-          <div class="media-inner">
-            <div class="noteBox toc tocBox">
-              <h2 class="tocTitle">On this page</h2>
-              <p class="small tocSub">Use these anchors to skip to what you need.</p>
-              <ul class="specs tocList">
-                <li><a href="#comparison">Quick comparison (Top 7)</a></li>
-                <li><a href="#reviews">Detailed reviews (1–7)</a></li>
-                <li><a href="#not-included">What Amazon listings don’t include</a></li>
-                <li><a href="#real-costs">Real cost breakdown in Canada</a></li>
-                <li><a href="#add-ons">Essential add-ons for living in a prefab home</a></li>
-                <li><a href="#faq">FAQ</a></li>
-                <li><a href="#disclosure">Affiliate disclosure</a></li>
-              </ul>
-            </div>
-          </div>
-        </aside>
+      <div class="pillrow">
+        <span class="pill2">No hype</span>
+        <span class="pill2">Canada-first costs</span>
+        <span class="pill2">What to verify before buying</span>
+        <span class="pill2">Expandable/modular focus</span>
       </div>
-    </section>
 
-    <div class="wrap"><div class="hr-glow"></div></div>
+      <div class="cta-row">
+        <a class="btn btn-primary" href="#comparison">Jump to comparison table</a>
+        <a class="btn btn-ghost" href="#real-costs">See real cost breakdown</a>
+      </div>
+
+      <p class="disclaimer hero-disclaimer">
+        Important: Local rules vary widely. Before you buy, confirm zoning and occupancy rules with your municipality and request documentation from the seller
+        (drawings/specs, electrical approvals, insulation details, and any snow-load or wind-load claims).
+      </p>
+    </div>
+
+    <!-- HERO IMAGE + TOC -->
+    <aside class="hero-media" aria-label="Page navigation">
+      <div class="media-inner">
+
+        <!-- HERO IMAGE (no distortion) -->
+        <figure class="hero-figure" style="margin:0 0 14px;">
+          <picture>
+            <source type="image/webp"
+              srcset="/assets/images/hero/best-prefab-homes-canada-2026-hero-1600x900.webp 1600w,
+                      /assets/images/hero/best-prefab-homes-canada-2026-hero-2400x1350.webp 2400w"
+              sizes="(max-width: 979px) 100vw, 40vw">
+            <img
+              src="/assets/images/hero/best-prefab-homes-canada-2026-hero-1600x900.webp"
+              width="1600"
+              height="900"
+              alt="Modern expandable prefab container home concept for Canadian buyers (warm, realistic exterior)"
+              loading="eager"
+              decoding="async"
+              fetchpriority="high"
+              style="width:100%;height:auto;aspect-ratio:16/9;object-fit:cover;border-radius:18px;">
+          </picture>
+        </figure>
+
+        <!-- TOC -->
+        <div class="noteBox toc tocBox">
+          <h2 class="tocTitle">On this page</h2>
+          <p class="small tocSub">Use these anchors to skip to what you need.</p>
+          <ul class="specs tocList">
+            <li><a href="#comparison">Quick comparison (Top 7)</a></li>
+            <li><a href="#reviews">Detailed reviews (1–7)</a></li>
+            <li><a href="#not-included">What Amazon listings don’t include</a></li>
+            <li><a href="#real-costs">Real cost breakdown in Canada</a></li>
+            <li><a href="#add-ons">Essential add-ons for living in a prefab home</a></li>
+            <li><a href="#faq">FAQ</a></li>
+            <li><a href="#disclosure">Affiliate disclosure</a></li>
+          </ul>
+        </div>
+      </div>
+    </aside>
+  </div>
+</section>
+
+<div class="wrap"><div class="hr-glow"></div></div>
 
     <!-- VIDEO: Amazon Prefab Reality Check -->
     <section class="section">
