--- a/best-prefab-homes-canada/index.html
+++ b/best-prefab-homes-canada/index.html
@@ -41,18 +41,24 @@
   <!-- Open Graph -->
   <meta property="og:type" content="article">
   <meta property="og:site_name" content="PrefabHomesCanada">
+  <meta property="og:locale" content="en_CA">
   <meta property="og:title" content="7 Best Prefab Homes on Amazon Canada (2026 Guide)">
   <meta property="og:description" content="A realistic Canadian guide to expandable prefab homes on Amazon: what’s included, what’s missing, and true installed costs.">
   <meta property="og:url" content="https://prefabhomescanada.github.io/best-prefab-homes-canada/">
+
   <meta property="og:image" content="https://prefabhomescanada.github.io/assets/images/og/best-prefab-homes-canada-2026-og-1200x630.webp">
+  <meta property="og:image:secure_url" content="https://prefabhomescanada.github.io/assets/images/og/best-prefab-homes-canada-2026-og-1200x630.webp">
+  <meta property="og:image:type" content="image/webp">
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="630">
+  <meta property="og:image:alt" content="Modern expandable prefab home in Canada – 2026 guide">
 
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="7 Best Prefab Homes on Amazon Canada (2026 Guide)">
   <meta name="twitter:description" content="Realistic Canadian guide to expandable prefab homes on Amazon. What’s included, what’s missing, and true installed costs.">
   <meta name="twitter:image" content="https://prefabhomescanada.github.io/assets/images/og/best-prefab-homes-canada-2026-og-1200x630.webp">
+  <meta name="twitter:image:alt" content="Expandable prefab homes in Canada (2026 guide)">
 
   <!-- JSON-LD: Organization + WebSite -->
   <script type="application/ld+json">
